Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61336

ApplicationWindow can't be used with QQuickView/QQuickWidget

XMLWordPrintable

      The ApplicationWindow component can't be used with QQuickView/QQuickWidget, since it is a window and since QQuickView and QQuickWidget do not accept a window as the root item.

      This was reported earlier in https://bugreports.qt.io/browse/QTBUG-29873, that was closed as invalid. However, if we can't use ApplicationWindow, we can't use a lot of QtQuick.Controls 2.1 functionalities, such as the dim/modal properties of Popup/Dialogs, since we not longer have any "overlay" created by ApplicationWindow (QQuickOverlay is an internal class only instantiated by ApplicationWindow). We also can't access any of ApplicationWindow's attached properties (activeFocusControl, etc.), that is not convenient at all.

      The fix can either be to support ApplicationWindow or to have another component that does a similar job (i.e. providing an overlay and attached properties).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            amnell Louis du Verdier
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes