src/quicktemplates2/qquickdrawer.cpp
@@ -226,6 +226,16 @@ void QQuickDrawerPrivate::reposition()
     QQuickPopupPrivate::reposition();
 }
 
+void QQuickDrawerPrivate::showOverlay()
+{
+    // managed in setPosition()
+}
+
+void QQuickDrawerPrivate::hideOverlay()
+{
+    // managed in setPosition()
+}
+
 void QQuickDrawerPrivate::resizeOverlay()
 {
     if (!dimmer || !window)
